# VoteWise-Election-Assistant

./: .env.example  .gitignore  Dockerfile  README.md  architecture-graph.html  cloudbuild.yaml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
backend/: analytics.py  app.py  cloud_logging.py  cloud_storage.py  config.py  database.py  election_data.py  exceptions.py  gemini_service.py  middleware.py  models.py  quiz_engine.py  secret_manager.py  security.py  tts_service.py
backend/routes/: analytics.py  chat.py  quiz.py  timeline.py
backend/tests/: conftest.py  test_api.py  test_cloud_services.py  test_core.py  test_quality_edges.py
frontend/: index.html
frontend/css/: style.css
frontend/js/: app.js
